src/ts/tests/fixtures/invalid_include_tree/needs_static.cloesce.ts
// @ts-nocheck
// InvalidDataSourceDefinition
import { IncludeTree } from "../../../src/ui/backend";

@Model()
export class Foo {
  id: number;

  bar: IncludeTree<Foo> = {}; // must be static
}
